<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/lbl_new_task"
        app:navigationIcon="@drawable/ic_navigate"
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_begin"
        app:layout_constraintGuide_begin="32dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        app:layout_constraintGuide_end="32dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/lbl_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_descricao"
        app:layout_constraintTop_toBottomOf="@id/til_titulo"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:hint="descrição"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_data"
        app:layout_constraintTop_toBottomOf="@id/til_descricao"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:hint="@string/lbl_date"
        app:startIconDrawable="@drawable/ic_calendar"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintEnd_toStartOf="@id/til_hora"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_hora"
        app:layout_constraintTop_toBottomOf="@id/til_descricao"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:hint="@string/lbl_hour"
        app:startIconDrawable="@drawable/ic_timer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toEndOf="@id/til_data"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCriar"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/lbl_create"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelar"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        android:text="@string/lbl_cancel"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintBottom_toTopOf="@id/btnCriar"
        />

</androidx.constraintlayout.widget.ConstraintLayout>